# quick-translator

./: README.md  main.py  pyproject.toml  test_all_versions.py  translate_gemini.py  translate_openai.py  translate_plamo.py  translation_benchmark.py
tests/: TEST.md  __init__.py  conftest.py  test_gemini.py  test_openai.py  test_plamo.py
