[project]
name = "quick-translator"
version = "0.1.0"
description = "OpenAI APIを使用した日本語⇔英語翻訳ツール"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-mock>=3.12.0",
    "ruff>=0.12.4",
    "ty>=0.0.1a15",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
minversion = "6.0"
